Fix nav final border not showing

--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -25,7 +25,7 @@
 		overflow: hidden;
 
 		@include breakpoint(sm) {
-			padding: $baseline 0 $baseline 0;
+			padding: $baseline 0 0 0;
 		}
 	}
 
@@ -207,8 +207,20 @@
 
 	&--secondary {
 
+
+		&__list {
+
+			@include breakpoint(sm) {
+				padding: 0 0 $baseline 0;
+				margin: 0;
+			}
+
+			@include breakpoint(md) {
+				display: none;
+			}
+		}
+
 		&__item {
-			display: none;
 
 			@include breakpoint(sm) {
 				display: block;
@@ -250,8 +262,8 @@
 			//border-bottom: 1px solid $thunder;
 		}
 
-		& > ul {
-			display: block;
+		& ul {
+			display: block !important;
 		}
 	}
 }
